[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/sprites/characters/candidate_portraits/team_a_candidate.png" type="Texture" id=1]
[ext_resource path="res://scripts/ui_elements/candidate_projection_bar_container.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/nokiafc22.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/shaders/OutlineShader.tres" type="Shader" id=4]

[sub_resource type="DynamicFont" id=2]
size = 24
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 4 )
shader_param/line_color = Color( 0, 0, 0, 1 )
shader_param/line_thickness = 2.0

[sub_resource type="DynamicFont" id=1]
size = 24
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[node name="CandidateProjectionBarContainer" type="HBoxContainer"]
margin_right = 800.0
margin_bottom = 100.0
custom_constants/separation = 0
script = ExtResource( 2 )

[node name="PercentageLabel" type="Label" parent="."]
margin_right = 150.0
margin_bottom = 100.0
rect_min_size = Vector2( 150, 100 )
custom_fonts/font = SubResource( 2 )
text = "95.00% "
align = 2
valign = 1

[node name="BorderColorRect" type="ColorRect" parent="."]
margin_left = 150.0
margin_right = 156.0
margin_bottom = 100.0
rect_min_size = Vector2( 6, 100 )
size_flags_vertical = 3
color = Color( 0, 0, 0, 1 )

[node name="ProgressBarContainer" type="VBoxContainer" parent="."]
margin_left = 156.0
margin_right = 656.0
margin_bottom = 100.0

[node name="TopPadding" type="Control" parent="ProgressBarContainer"]
margin_right = 500.0
margin_bottom = 21.0
size_flags_vertical = 3

[node name="ProgressBarColorRect" type="ColorRect" parent="ProgressBarContainer"]
margin_top = 25.0
margin_right = 500.0
margin_bottom = 75.0
rect_min_size = Vector2( 500, 50 )
size_flags_vertical = 0
color = Color( 1, 0, 0, 1 )

[node name="BottomPadding" type="Control" parent="ProgressBarContainer"]
margin_top = 79.0
margin_right = 500.0
margin_bottom = 100.0
size_flags_vertical = 3

[node name="CandidateTextureContainer" type="HBoxContainer" parent="."]
margin_left = 656.0
margin_right = 761.0
margin_bottom = 100.0

[node name="Padding" type="Control" parent="CandidateTextureContainer"]
margin_right = 20.0
margin_bottom = 100.0
rect_min_size = Vector2( 20, 0 )

[node name="CandidatePortraitTextureRect" type="TextureRect" parent="CandidateTextureContainer"]
material = SubResource( 3 )
margin_left = 24.0
margin_right = 105.0
margin_bottom = 100.0
texture = ExtResource( 1 )
stretch_mode = 4

[node name="TextLabel" type="Label" parent="."]
visible = false
margin_left = 761.0
margin_top = 35.0
margin_right = 917.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 1 )
text = "didn't vote"
valign = 1

[node name="DelayTimer" type="Timer" parent="."]
process_mode = 0
one_shot = true
